Fixed Lots of Bugs
-Displays correctly in new chrome and ie now
-Fixed resolution scaling, now the game really scales and is not
distorted and fuzzy, speed of stuff seems faster, may have to change it
up a bit.
-Got a menu to show up over the game, its blank and does not fade in
yet. Resolution of canvas is now correct unlike before.

--- a/pong.css
+++ b/pong.css
@@ -3,14 +3,16 @@ body{
 } 
 
 #pongCanvas{
+	position: absolute;
+	left:0;
+	right:0;
+	margin-left:auto;
+	margin-right:auto;
 	width: 600px;
-	height:400px;
-	padding-left: 0;
-	padding-right: 0;
-	margin-left: auto;
-	margin-right: auto;
+	height: 400px;
 	display: block;
 	border: 1px solid #000000;
+	z-index: 0; /*so the menu can show up on top of it*/
 }
 
 #enableJavaScriptText{
